# poetry2nix-venv

./: README.md  pyproject.toml  shell.nix
my_python_nix_test/: __init__.py  a.py  helpers.py
